# sane-haskell

./: CHANGELOG.md  README.md  flake.nix  sane-haskell.cabal
app/: Main.hs
src/Data/Numeric/Array/: Simple.hs
