cabal-version:      2.4
name:               sane-haskell
version:            0.1.0.0
author:             Viktor Kronvall
maintainer:         viktor.kronvall@gmail.com
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Data.Numeric.Array.Simple
  build-depends:
    , base        ^>=4.14.3.0
    , bytestring
    , cereal
    , cpu
    , vector

  hs-source-dirs:   src
  default-language: Haskell2010

executable sane
  main-is:          Main.hs
  build-depends:
    , base                  ^>=4.14.3.0
    , bytestring
    , optparse-applicative
    , sane-haskell
    , vector

  hs-source-dirs:   app
  default-language: Haskell2010
